--- a/style.css
+++ b/style.css
@@ -314,3 +314,36 @@ a {
   bottom: -65px;
   left: -80px;
 }
+
+/* ====== games ======= */
+.games {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  margin: 30px auto;
+}
+.game {
+  display: flex;
+  gap: 16px;
+  align-items: center;
+  /* width: 250px; */
+  padding: 10px;
+  cursor: pointer;
+  border: 2px solid transparent;
+  border-radius: 50px;
+  transition: 1s ease-in-out;
+}
+
+.game:hover {
+  border: 2px solid #ff42a5;
+}
+.game-img img {
+  max-width: 100%;
+}
+
+.game-name {
+  color: #0b0223;
+  font-size: 20px;
+  font-weight: 600;
+}
