--- a/style.css
+++ b/style.css
@@ -347,3 +347,68 @@ a {
   font-size: 20px;
   font-weight: 600;
 }
+
+/* ==== footer ===== */
+
+.footer {
+  display: grid;
+  place-items: center;
+  background: #0b0223;
+  padding: 120px 0px 60px;
+}
+
+.footer .logo {
+  font-size: 45px;
+  font-weight: 700;
+  color: white;
+  display: flex;
+  align-items: center;
+  margin-bottom: 66px;
+}
+
+.footer .logo img {
+  max-width: 85px;
+  margin-right: 10px;
+}
+.footer .logo span {
+  color: #ff42a5;
+}
+.footer-link {
+  display: flex;
+  align-items: center;
+  gap: 60px;
+}
+.footer-link li {
+  color: white;
+  font-size: 18px;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.social-link {
+  display: flex;
+  gap: 20px;
+  margin: 40px 0px;
+}
+
+.social-link i {
+  color: white;
+  font-size: 30px;
+  height: 60px;
+  width: 60px;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.1);
+  display: inline-block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.copy-text {
+  color: rgba(255, 255, 255, 0.6);
+  font-size: 16px;
+  font-weight: 500;
+  margin-top: 60px;
+  cursor: pointer;
+}
