--- a/style.css
+++ b/style.css
@@ -213,12 +213,13 @@ a {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: 20px;
 }
 
 .card {
-  width: 342px;
+  max-width: 342px;
   height: 500px;
-  border-radius: 8px;
+  border-radius: 16px;
   cursor: pointer;
 }
 .card-img img {
@@ -236,6 +237,8 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
+  border: 4px solid transparent;
+  border-radius: 16px;
   z-index: 999;
 }
 
@@ -245,16 +248,18 @@ a {
   left: 0;
   right: 0;
   bottom: 0;
-  border-radius: 10px;
+  border-radius: 16px;
   position: absolute;
   transition: 5s;
   z-index: 2;
   background: rgba(11, 2, 35, 0.8);
   display: none;
+  transition: 2s;
 }
 
 .card-img:hover.card-img::after {
   display: block;
+  border: 4px solid #f948b2;
 }
 
 .hover {
@@ -283,7 +288,7 @@ a {
 /* ======== play instant ===== */
 .play-instant {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-evenly;
   gap: 120px;
   align-items: center;
   margin-bottom: 100px;
@@ -291,6 +296,9 @@ a {
 .play-instant-content {
   max-width: 50%;
   text-align: right;
+}
+.instant-two {
+  text-align: left;
 }
 
 .play-instant-content .section__des {
@@ -313,6 +321,23 @@ a {
   position: absolute;
   bottom: -65px;
   left: -80px;
+}
+
+/* Play instant img two */
+.play-instant-img-two .big-img {
+  max-width: 100%;
+}
+.play-instant-img-two {
+  position: relative;
+}
+.abs-img img {
+  max-width: 100%;
+}
+
+.play-instant-img-two .abs-img {
+  position: absolute;
+  bottom: -65px;
+  right: -80px;
 }
 
 /* ====== games ======= */
@@ -338,6 +363,9 @@ a {
 .game:hover {
   border: 2px solid #ff42a5;
 }
+.game:hover .game-name {
+  color: #ff42a5;
+}
 .game-img img {
   max-width: 100%;
 }
@@ -346,6 +374,7 @@ a {
   color: #0b0223;
   font-size: 20px;
   font-weight: 600;
+  transition: 1s ease-in-out;
 }
 
 /* ==== footer ===== */
