fix design error

--- a/style.css
+++ b/style.css
@@ -210,9 +210,8 @@ a {
 }
 
 .cards {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
   gap: 20px;
 }
 
